# systems_experiments

./: .gitignore  Readme.md  test.c  wherefore_art_thou_python
W_and_X/: Readme.md  build.sh  test.c
argv/: Readme.md  build.sh  check_args.c  clear_lib.c  clear_with_lib.c  environ_addr.c  lib.c  lib.h  mutate_argv.c  test.c
argv0/: Readme.md  build.sh  lib.c  shebang_test.sh  test.c  test.py  test_python.py
autodaemonize/: .gitignore  Readme.md  build.sh  daemon.hpp  disposable  disposable.cpp  nice_user  nice_user.cpp  selfish_user  selfish_user.cpp
bpftrace_recipes/catch_recv/: recvfrom.bt
can_pthreads_join_late/: build.sh  foo.c  main.c
check_eh_frame/: Readme.md  check.sh
contextvar_segfault/: Readme.md  crash.py
cpp_catch_ctor/: Readme.md  test.cc  test.sh
cpp_multiprocess/: Readme.md  test.cpp
crash_in_malloc/: Readme.md  alarm.c  test.c
cxx20_split_with_ranges/: Readme.md  split.cpp
cython_checker/: Readme.md  check.sh
debug_check/: Readme.md  build.sh  test.cpp
demangle/: Readme.md  build.sh  demangle.cpp
dlopen_ld/: Readme.md  build.sh  foo.c  main.c  notes  transitive.c
dlopen_vs_ldd/: Readme.md  main.c
dlsym/: test.c
emptyfunc/: empty.cpp
evil_static_init/: Readme.md  build.sh  evil.cpp  innocent.cpp
faster_hexdig/: Readme.md  build.sh  test.cc
fastlog/: .clang-format  CMakeLists.txt  build.sh
fastlog/eg/forks/src/: main.c
fastlog/eg/threads/src/: main.c
fastlog/eg/vm_reader/src/: main.cc
fastlog/include/: fastlog.h  libmmlog.h  mmlog.h
fastlog/src/: libmmlog.c  main.c
fastlog/tests/: mmlog.c
find_all_syms/: Readme.md  findsyms.sh
force_sigpipe/: Readme.md
force_sigpipe/src/: test.c
fork_stream/: Readme.md  test.c
fork_without_handlers/: Readme.md  build.sh  clone.c
gcc12_type_deduction/: Readme.md  build.sh  test.cpp
get_stack/: Readme.md  test.cpp
getpwuid_r/: Readme.md  build.sh  run.sh  test.c
here_and_gone/: Readme.md  notifier.c  test.c
hugepage_map/: Readme.md  test.c
itimer_signals/: Readme.md  itimer_rate.c  test.c
ld_preload_wrapper/: .gitignore  Readme.md  build.sh
ld_preload_wrapper/include/: inject_library.h
ld_preload_wrapper/src/: env.c  peekenv.c  test.c
libc_wrapping/: Readme.md  build.sh  peekenv.c
libsegfault/: getter.sh
lotsathreads/: Readme.md  build.sh  lotsathreads.c
lz4_analyze/: analysis.py
macos___fork/: Cargo.toml  Readme.md
macos___fork/src/: main.rs
magic_bytes/: Readme.md  ls.magic  magic.sh
mangling/: Readme.md  test.cpp
memfd_create/: Readme.md  test.c
memfd_secret/: Readme.md  build.sh  secret.c  test.c
memio_dynamics/: Readme.md  build.sh  readme.md  test.c
mmap_coalescing/: Readme.md  test.c
mmap_directory/: Readme.md  test.c
mmap_range/: Readme.md  test.c
no_libc/: Readme.md  build.sh  lolopenat.c  main.c  test.c
noexec_can_exec/: .gitignore  Readme.md  build.sh  lib.c  main.c
nopeeking_registry/: CMakeLists.txt  compile_commands.json
nopeeking_registry/include/: nopeeking.h
nopeeking_registry/src/: main.c  nopeeking.c
not_my_segfault/: Readme.md  build.sh  memcpy_safe.h  test.c
numbers_are_functions/: Readme.md  naughty.c
perf_event_open/: CMakeLists.txt
perf_event_open/src/: main.c
pid_1_signals/: .gitignore  Dockerfile  README.md  build.sh
pid_1_signals/src/: sigterm_test.c  wrapper.c
pid_tid_order/: Readme.md  build.sh  test.cpp
pr_set_vma_anon_name/: Readme.md  test.c
process_vm_readv_bench/: run.sh  test.c
procmap_setresuid/: Readme.md  test.c
ptrace_me_yama/: Readme.md  build.sh  test.c
python_unshare/: Readme.md  unshare.py
readmsrl/: test.c
reaping_orphans/: .gitignore  build.sh
reaping_orphans/src/: call_orphanizer.c  orphanizer.c
replace_attrs/: Readme.md  comparison.py
return_codes/: Readme.md  return.c
rust_null_start_quiet/: Cargo.toml  Readme.md  run.sh
seccomp_sigsys/: .gitignore  Readme.md  build.sh  secc.c
segfaults/: .gitignore  Readme.md  build.sh  test.c  use_libsegfault.sh  use_libsegfault_informatively.sh  use_ltrace.sh  use_strace.sh
setns/: Readme.md  test.c  test2.c
sigaction_deadlock/: Readme.md  build.sh  deadlock.c
sigev_thread/: Readme.md  sigev_thread.c
signal_preemption/: Readme.md  test.c
sigsegv_interrupted/: Readme.md  build.sh  test.c
sigsegv_return_from_kill/: .gitignore  Readme.md  build.sh  test.c  watchseg.c
simple_ringbuffer/: Readme.md  build.sh  main.cpp  ring_buffer.hpp
skimmer/: Readme.md  build.sh  skimmer.c
sleepytime/: .gitignore  build.sh  test.cpp  waste.c
smaps/: build.sh  test.cpp
smaps_spy/: Cargo.toml  README.md
smaps_spy/data/: maps.test.txt  smaps.test.txt
smaps_spy/src/: lib.rs  main.rs  parser.rs  ui.rs  utils.rs
smaps_spy/tests/: parser_tests.rs
snprintf/: Readme.md  test.c
sofile_with_main/: Readme.md  build.sh  main.c
stack_overflow_finitely/: .gitignore  Readme.md  build.sh  explode.c
start_so/: CMakeLists.txt  Readme.md  foo.cpp  main.cpp
static_tls/: Readme.md  build.sh  dlopener.c  run.sh  test.c  test_requirer.c  test_tester.c
stdio_multiplexing/: Readme.md  build.sh  test.c
tcp_close_timewait/: Readme.md  buildit.sh  client.c  server.c
tcp_connect_rate/src/: main.c
threaded_forks/: build.sh  foo.cpp  main.cpp
threadlocal/: .test.c.swp  Readme.md  test.c
timer_create_lifetime/: build.sh  test.c
timer_overhead/: Readme.md  time_oh.c
tsc_time/: CMakeLists.txt  build.sh
tsc_time/include/accounting/: accounting.hpp  cycle_counter.hpp
tsc_time/src/: main.cpp
type_punning/: Readme.md  build.sh  punning.cpp
under_alignment/: build.sh  test.cpp
unshare_orphans/: Readme.md  build.sh  main.c
vdso_elf/: Readme.md  test.c
vdso_gettimeofday/: .gitignore  build.sh  test.c
weak_symbol/: strong_symbol.c  test.c
what_is_my_exe/: Readme.md  build.sh  test.cpp
wherefore_art_thou_python/: Readme.md  finder.py
who_are_my_kids/: Readme.md  test.c
write_append/: CMakeLists.txt  build.sh
write_append/src/: main.c  main.cc  main.cpp
xbuild_rust_i686_musl/: Dockerfile  Dockerfile.4  Readme.md  config.toml  get_configs  get_configs.md  go.sh  uname
(+3 files in other folders)
