[package]
name = "smaps_spy_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"

[lib]
name = "smaps_spy_tui"
path = "src/lib.rs"
